fix image cutting off

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: row;
   margin: 5% 10% 0 10%;
-  height: 594px;
+  height: 30%;
 }
 
 .body {
